[metadata]
name = smo
description = Implementation of the Silver Mountain Operator (SMO) for the estimation of background distributions.
url = https://github.com/maurosilber/smo
author = Mauro Silberberg
author_email = maurosilber@gmail.com
license = MIT
long_description = file: README.rst
keywords = background, fluorescence, microscopy, imaging
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Framework :: napari

[options]
packages = smo
include_package_data = True
install_requires =
    numpy
    scipy

[options.extras_require]
dev =
    pre-commit
    pytest
    tox
    tox-conda

[options.entry_points]
napari.plugin =
    smo = smo.plugins.napari

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    # imported but unused
    __init__.py: F401
# Black
max-line-length = 88
extend-ignore = E203
